@@ -73,8 +73,11 @@ if (LIBXML2_FOUND)
 endif ()
 ot_pyinstallcheck_test (ComparisonOperator_std)
 if (LIBXML2_FOUND)
-ot_pyinstallcheck_test (Study_saveload)
-ot_pyinstallcheck_test (Study_std IGNOREOUT)
+  ot_pyinstallcheck_test (Study_saveload)
+  ot_pyinstallcheck_test (Study_std IGNOREOUT)
+  if (HDF5_FOUND)
+    ot_pyinstallcheck_test (Study_h5 IGNOREOUT)
+  endif ()
 endif ()
 ot_pyinstallcheck_test (Path_std IGNOREOUT)
 ot_pyinstallcheck_test (ResourceMap_std IGNOREOUT)
