@@ -22,6 +22,7 @@
 === Miscellaneous ===
 
 === Bug fixes ===
+ * #1661 (XMLH5StorageManager does not store IndicesCollection into HDF5 files)
  * #1662 (Operator() of a CovarianceModel with multidimensional output should yield object of type SquareMatrix)
 
 
